--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
 {% block content %}
 <section class="d-flex flex-wrap">
     {%for viaggio in viaggi_approvati%}
+    {%if viaggio.data > oggi%}
     <article class="me-4 ms-3 mb-4 image-container">
         <a href="{{url_for('pagina_viaggio', id_viaggio = viaggio.id)}}"><img class="zoomable rounded" src="{{url_for('static', filename = 'viaggio/'+viaggio.img_viaggio)}}" alt="Questa è l'immagine del viaggio in {{viaggio.nazione}}"></a>
         <div class="fav-button text-white d-flex justify-content-start fs-5">
@@ -31,6 +32,7 @@
         </section>
         <p class="priceImgPos pMarginNegativo">{{viaggio.prezzo}} €</p>
     </article>
+    {%endif%}
     {%endfor%}
 </section>
 
