--- a/templates/viaggio.html
+++ b/templates/viaggio.html
@@ -74,7 +74,7 @@
 
             <div>
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-outline-secondary btn-sm me-3 fontCopperplate" data-bs-toggle="modal" data-bs-target="#modalModifica">
+                <button type="button" class="btn btn-outline-secondary btn-sm me-3 fontCopperplate" data-bs-toggle="modal" data-bs-target="#modalModifica" {%if oggi>=viaggio.data%}disabled{%endif%}>
                     Modifica annuncio
                 </button>
                 <!-- Modal -->
@@ -157,11 +157,19 @@
                 </form>
             </div>
             {% elif current_user.is_authenticated and current_user.id != viaggio.id_coordinatore %}
+            {%if current_user.id not in lista_id_partecipanti and viaggio.data > oggi%}
             <form action="{{url_for('pagina_prenotazione', id_viaggio = viaggio.id, id_utente = current_user.id)}}", method="POST">
                 <button type="submit" class="btn btn-outline-success btn-sm fontCopperplate" data-bs-toggle="modal" data-bs-target="#modalPrenotazione">
                     Prenota
                 </button>
             </form>
+            {%elif current_user.id in lista_id_partecipanti and oggi <= viaggio.data %}
+            <p class="pMarginNegativo fontCopperplate text-success fs-5">Preparati a vivere un'esperienza indimenticabile!</p>
+            {%elif current_user.id in lista_id_partecipanti and oggi > viaggio.data%}
+            <form>
+                <button>Lascia una recensione</button>
+            </form>
+            {%endif%}
             {%elif current_user.is_authenticated == False %}
             <p class="pMarginNegativo fontCopperplate">Per prenotare un viaggio, devi prima <a href="{{url_for('iscriviti')}}">registrarti</a> su Wanderlust!</p>
             {%endif%}
