--- a/templates/approvazione_viaggi.html
+++ b/templates/approvazione_viaggi.html
@@ -14,7 +14,7 @@
         <p class="titleImgPos">{{viaggio.titolo}}</p>
         <section class="d-flex justify-content-start align-items-center sectionDaysImgPos">
             <i class="bi bi-calendar-date me-2"></i>
-            <p class="pMarginNegativo">{{viaggio.num_giorni}} giorni</p>
+            <p class="pMarginNegativo">{{viaggio.data}}</p>
         </section>
         <p class="priceImgPos pMarginNegativo">{{viaggio.prezzo}} €</p>
         <form action="{{url_for('changeApprovazione', id_viaggio = viaggio.id)}}" method="POST">
