--- a/templates/lista_partecipanti.html
+++ b/templates/lista_partecipanti.html
@@ -7,7 +7,7 @@
 <table class="table table-striped table-hover">
   <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col">Foto</th>
         <th scope="col">Nome</th>
         <th scope="col">Cognome</th>
         <th scope="col">Email</th>
