--- a/templates/viaggio.html
+++ b/templates/viaggio.html
@@ -166,8 +166,68 @@
             {%elif current_user.id in lista_id_partecipanti and oggi <= viaggio.data %}
             <p class="pMarginNegativo fontCopperplate text-success fs-5">Preparati a vivere un'esperienza indimenticabile!</p>
             {%elif current_user.id in lista_id_partecipanti and oggi > viaggio.data%}
-            <form>
-                <button>Lascia una recensione</button>
+            <form action="{{url_for('nuova_recensione', id_viaggio = viaggio.id, id_utente = current_user.id)}}", method="POST">
+                <button type = "button" class="btn btn-sm btn-warning fontCopperplate" data-bs-toggle="modal" data-bs-target="#recensioneDaPaginaViaggioModal">Lascia una recensione</button>
+                <div class="modal fade" id="recensioneDaPaginaViaggioModal" tabindex="-1" aria-labelledby="recensioneDaPaginaViaggioModal" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5 fontCopperplate" id="recensioneDaPaginaViaggioModal">Valuta la tua esperienza</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mb-3">
+                                    <label for="idTesto" class="form-label">Com'è stato il viaggio?</label>
+                                    <textarea class="form-control" id="idTesto" rows="3" name="testo" required minlength="30"></textarea>
+                                </div>
+                                <section class="mb-3 d-flex flex-column">
+                                    <p class="pMarginNegativo">In una scala da 1 a 5, indica quanto hai apprezzato i seguenti aspetti del tuo viaggio:</p>
+                                    <article class="d-flex justify-content-between">
+                                        <section>
+                                            <label class = "col-form-label" for = "valutazione_relax" >Relax</label>
+                                            <select id="num_giorni" name="valutazione_relax" class="form-select" aria-label="Default select example" required>
+                                                <option selected></option>
+                                                <option value = "1" data-icon="bi bi-star-fill">★</option>
+                                                <option value = "2" data-icon="bi bi-star-fill">★★</option>
+                                                <option value = "3" data-icon="bi bi-star-fill">★★★</option>
+                                                <option value = "4" data-icon="bi bi-star-fill">★★★★</option>
+                                                <option value = "5" data-icon="bi bi-star-fill">★★★★★</option>
+                                            </select>
+                                        </section>
+
+                                        <section>
+                                            <label class = "col-form-label" for = "valutazione_avventura">Avventura</label>
+                                            <select id="valutazione_avventura" name="valutazione_avventura" class="form-select" aria-label="Default select example" required>
+                                                <option selected></option>
+                                                <option value = "1" data-icon="bi bi-star-fill">★</option>
+                                                <option value = "2" data-icon="bi bi-star-fill">★★</option>
+                                                <option value = "3" data-icon="bi bi-star-fill">★★★</option>
+                                                <option value = "4" data-icon="bi bi-star-fill">★★★★</option>
+                                                <option value = "5" data-icon="bi bi-star-fill">★★★★★</option>
+                                            </select>
+                                        </section>
+
+                                        <section>
+                                            <label class = "col-form-label" for = "valutazione_divertimento">Divertimento</label>
+                                            <select id="valutazione_divertimento" name="valutazione_divertimento" class="form-select" aria-label="Default select example" required>
+                                                <option selected></option>
+                                                <option value = "1" data-icon="bi bi-star-fill">★</option>
+                                                <option value = "2" data-icon="bi bi-star-fill">★★</option>
+                                                <option value = "3" data-icon="bi bi-star-fill">★★★</option>
+                                                <option value = "4" data-icon="bi bi-star-fill">★★★★</option>
+                                                <option value = "5" data-icon="bi bi-star-fill">★★★★★</option>
+                                            </select>
+                                        </section>
+                                    </article>
+                                </section>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary fontCopperplate" data-bs-dismiss="modal">Annulla</button>
+                                <button type="submit" class="btn btn-primary fontCopperplate">Pubblica</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </form>
             {%endif%}
             {%elif current_user.is_authenticated == False %}
@@ -184,11 +244,78 @@
     </section>
 </article>
 
-<section class = "d-flex justify-content-end align-items-center mt-3">
+{% if recensioni_viaggio %}
+<section class="mt-5 pt-3 border-top">
+    <h2 class="fontCopperplate fs-4 fw-bold mb-1">Recensioni {{viaggio.nazione}}</h2>
+    <div id = "divRecensioni" class="d-flex">
+    {%for recensione in recensioni_viaggio%}
+        <article class="col-3 mt-2 p-2 border me-4">
+            <div class="d-flex justify-content-between align-items-center">
+                <section class="d-flex justify-content-start align-items-center">
+                    <img class = "img_profilo_list rounded-circle" src = "{{url_for('static', filename = 'utenti/'+recensione.img_profilo)}}">
+                    <p class="pMarginNegativo ms-2 fontChancery">{{recensione.nome}} {{recensione.cognome}}</p>
+                </section>
+                <p class="pMarginNegativo fontChancery">{{recensione.data}}</p>
+            </div>
+            <article class="pt-2 border-top mt-2">
+                <section class="d-flex justify-content-between">
+                    <span class="d-flex justify-content-start">
+                        <i class="bi bi-backpack me-1"></i>
+                        <p class="fontCopperplate">Avventura:</p>
+                    </span>
+                    <article>
+                        {%for i in range(0, recensione.valutazione_avventura)%}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {%endfor%}
+                    </article>
+                </section>
+                <section class="d-flex justify-content-between">
+                    <span class="d-flex justify-content-start">
+                        <i class="bi bi-emoji-laughing me-1"></i>
+                        <p class="fontCopperplate">Divertimento:</p>
+                    </span>
+                    <article>
+                        {%for i in range(0, recensione.valutazione_divertimento)%}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {%endfor%}
+                    </article>
+                </section>
+                <section class="d-flex justify-content-between">
+                    <span class="d-flex justify-content-start">
+                        <i class="bi bi-cup-straw me-1"></i>
+                        <p class="fontCopperplate">Relax:</p>
+                    </span>
+                    <article>
+                        {%for i in range(0, recensione.valutazione_relax)%}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {%endfor%}
+                    </article>
+                </section>
+            </article>
+            <article class="pt-2 mt-2 border-top articleReview">
+                <p>{{recensione.testo}}</p>
+            </article>
+        </article>
+        {%endfor%}
+    </div>
+    
+    <section class="d-flex justify-content-between">
+        <i id = "iconScrollLeft" class="bi bi-arrow-left-circle-fill scrollingIcon"></i>
+        <i id = "iconScrollRight" class="bi bi-arrow-right-circle-fill scrollingIcon"></i>
+    </section>
+
+</section>
+{%endif%}
+
+<section class = "d-flex justify-content-end align-items-center mt-5">
     <a class="d-flex justify-content-start anchorNoTextDec fs-3 text-success" href="{{ url_for('home') }}">
         <i class="bi bi-house-heart me-2"></i>
         <p class="fontCopperplate pMarginNegativo">Scopri altri viaggi</p>
     </a> 
 </section>
 
+{%endblock%}
+
+{%block js%}
+<script src="{{url_for('static', filename='scrolling.js')}}" type="text/javascript"></script>
 {%endblock%}
