--- a/static/style.css
+++ b/static/style.css
@@ -299,6 +299,7 @@ body {
     height: 6em;
     border: 2px solid rgb(168, 221, 168);
     margin-bottom: 3em;
+    margin-right: 1em;
 }
 
 .filterSection:hover{
@@ -324,4 +325,21 @@ body {
 
 .nascondi {
     display: none !important;
+}
+
+#sectionChat{
+    max-height: 50em;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#sectionMessaggi{
+    max-height: 40em;
+    overflow-y: auto;
+}
+
+#articleComment{
+    margin-bottom: 1em;
 }
